--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
         <ul class="ul1 nav1">
             
-            <li class="navLi"><a class="navLink" href="/About.html">About</a></li>
+            <li class="navLi"><a class="navLink" href="/Portfolio/About.html">About</a></li>
             <li class="navLi"><a class="navLink" href="http://127.0.0.1:3000/Resume.html">Resume</a></li>
             <li class="navLi"><a class="navLink" href="http://127.0.0.1:3000/Experience.html">Experiene</a></li>
             <li class="navLi"><a class="navLink" href="http://127.0.0.1:3000/contact.html">Contact</a></li>
