Update index.html links modified

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <ul class="ul1 nav1">
             
             <li class="navLi"><a class="navLink" href="/Portfolio/About.html">About</a></li>
-            <li class="navLi"><a class="navLink" href="http://127.0.0.1:3000/Resume.html">Resume</a></li>
-            <li class="navLi"><a class="navLink" href="http://127.0.0.1:3000/Experience.html">Experiene</a></li>
-            <li class="navLi"><a class="navLink" href="http://127.0.0.1:3000/contact.html">Contact</a></li>
+            <li class="navLi"><a class="navLink" href="/Portfolio/Resume.html">Resume</a></li>
+            <li class="navLi"><a class="navLink" href="/Portfolio/Experience.html">Experiene</a></li>
+            <li class="navLi"><a class="navLink" href="/Portfolio/contact.html">Contact</a></li>
         </ul>
     </nav>
 
